# windows-privesc-assistant

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: known_cves.json  known_vulnerable_services.json
examples/: config.yaml
src/privesc_assistant_win/: cli.py
src/privesc_assistant_win/checks/: __init__.py  base.py
src/privesc_assistant_win/checks/windows/: misconfigurations.py  patch_cve.py  path.py  scheduled_tasks.py  services.py  token_privileges.py  weak_permissions.py
src/privesc_assistant_win/config/: default_config.yaml  loader.py  schema.py
src/privesc_assistant_win/core/: engine.py  finding.py  registry.py  scan_context.py  utils.py
src/privesc_assistant_win/reporting/: __init__.py  base_reporter.py  json_reporter.py  terminal_reporter.py
src/privesc_assistant_win/scoring/: risk_scorer.py
tests/integration/: setup_vulnerable_vm.ps1
tests/unit/: test_cli.py  test_config.py  test_core.py  test_misconfigurations.py  test_patch_cve.py  test_path.py  test_reporting.py  test_risk_scorer.py  test_scheduled_tasks.py  test_services.py  test_token_privileges.py  test_weak_permissions.py
