[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-privesc-assistant"
version = "0.1.0"
description = "A CLI tool that automatically enumerates a Windows system for privilege escalation vectors."
authors = [
    { name = "Rimon" }
]
requires-python = ">=3.10"
dependencies = [
    "pywin32"
]

[project.scripts]
privesc-assistant-win = "privesc_assistant_win.cli:main"
