[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-privesc-assistant"
version = "0.1.0"
description = "A CLI tool that automatically enumerates a Windows system for privilege escalation vectors."
authors = [
    { name = "Rimon" }
]
requires-python = ">=3.10"
dependencies = [
    "pywin32>=306",
    "pyyaml>=6.0",
    "jsonschema>=4.17.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0"
]
build = [
    "pyinstaller>=6.0"
]

[project.scripts]
privesc-assistant-win = "privesc_assistant_win.cli:main"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
